--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="menu_result">Result</string>
     <string name="menu_number">Number</string>
+    <string name="menu_number_edit">NumberEdit</string>
     <string name="menu_member">Member</string>
     <string name="menu_member_edit">MemberEdit</string>
     <string name="menu_home">Home</string>
